ui: add UI Elements and use in existing views
Some documentation inline.
UI Elements (and thus the styleguide) are Work In Progress.

Added:

layouts:
- _base,
    - application
    - styleguide

application partials:
- app_header
- app_alerts
- user_menu

ui_helper:
- component(), combo()
- is_active?(link)
- link_from_item

combos:
- header

components:
- tabs
- icon
- dropdown
- button

misc:
- sass: refactor layouts#home to use data properties
- sass: fix ui-header
- app_controller#authenticated?: add flash message to redirect
- app_controller: explicitly give views access to #current_user
- tmp: main menu

--- a/app/assets/stylesheets/combos/_ui-header.sass
+++ b/app/assets/stylesheets/combos/_ui-header.sass
@@ -33,7 +33,7 @@
  *-----------------------------------------
 .ui-header-user
   +position-top-right($space-s, $space-s)
-  .dropdown
+  .dropdown, .button
     top: $space-x
 
 /**
