--- a/app/views/styleguide/05_Forms/_1_2_form-columned.html.haml
+++ b/app/views/styleguide/05_Forms/_1_2_form-columned.html.haml
@@ -17,7 +17,7 @@
           %label.form-label
             Checkboxes
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %label.col2of6
@@ -33,7 +33,7 @@
           %label.form-label
             Radios
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %label.col2of6
@@ -49,7 +49,7 @@
           %label.form-label
             Date
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %input.block.ui-datepicker{:type => "text"}/
@@ -57,7 +57,7 @@
           %label.form-label
             Text
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %input.block{:type => "text"}/
@@ -66,14 +66,14 @@
             Textarea
             %small Comment if needed
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Personen, die zum Werk beigetragen haben, z.B. Bühnenbildner oder die Regieassistenz. Die entsprechende Funktion sollte ebenfalls genannt werden.", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
           .form-item
             %textarea.block
         .ui-form-group.columned
           %label.form-label
             Select
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %select.block
@@ -83,7 +83,7 @@
           %label.form-label
             Text
             %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-              %i.icon-question
+              = component('icon.question')
             %small Comment if needed
           .form-item
             %input.block{:type => "text"}/
