--- a/app/views/styleguide/05_Forms/_3_form-multi-select.html.haml
+++ b/app/views/styleguide/05_Forms/_3_form-multi-select.html.haml
@@ -19,4 +19,4 @@
         %li.multi-select-input-holder
           %input.multi-select-input{:type => "text"}/
           %a.multi-select-input-toggle{:href => "#"}
-            %i.icon-arrow-down
+            = component('icon.arrow-down')
