--- a/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
+++ b/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
@@ -13,6 +13,6 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
-      %i.icon-nav-help{class: name}
-      %i.icon-nav-search{class: name}
+      = component('icon.nav-help', name)
+      = component('icon.nav-search', name)
 
