--- a/app/views/styleguide/06_Icons/_7_icon-mini.html.haml
+++ b/app/views/styleguide/06_Icons/_7_icon-mini.html.haml
@@ -9,7 +9,7 @@
 
 = partial('element', element) do
   = partial('example') do
-    %i.icon-group-mini
-    %i.icon-user-mini
-    %i.icon-tag-mini
+    = component('icon.group-mini')
+    = component('icon', 'icon-user-mini')
+    = component('icon', 'icon-tag-mini')
 
