--- a/app/views/styleguide/07_Components/_10_modals.html.haml
+++ b/app/views/styleguide/07_Components/_10_modals.html.haml
@@ -21,7 +21,7 @@
           %h3.title-l
             ui-modal Title
           %a.modal-close.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :title => "Close"}
-            %i.icon-close
+            = component('icon.close')
         .ui-modal-toolbar.top
           ui-toolbar content if any
         .ui-modal-body
