--- a/app/views/styleguide/08_Combos/_04_footer.html.haml
+++ b/app/views/styleguide/08_Combos/_04_footer.html.haml
@@ -30,7 +30,7 @@
             Archivierungsrichtlinien ZHdK
       %p.ui-footer-copy
         %a{:href => "http://madek.zhdk.ch"}
-          %i.icon-madek.ui-footer-logo
+          = component('icon.madek', 'ui-footer-logo')
         Zürcher Hochschule der Künste and contributors
       %p.ui-footer-version
         Last deployment:
