--- a/app/views/styleguide/08_Combos/_08_1_1-media-overview.html.haml
+++ b/app/views/styleguide/08_Combos/_08_1_1-media-overview.html.haml
@@ -32,7 +32,7 @@
         %dt.media-data-title.title-xs-alt Privacy
         %dd.media-data-content
           This entry is public
-          %i.icon-privacy-public
+          = component('icon.privacy-public')
         %dt.media-data-title.title-xs-alt Eigentumer/in im Medienarchiv
         %dd.media-data-content
           %a{:href => "#"} Rüegger, Romy
