--- a/app/views/styleguide/08_Combos/_08_2_set-overview.html.haml
+++ b/app/views/styleguide/08_Combos/_08_2_set-overview.html.haml
@@ -14,7 +14,7 @@
           .ui-thumbnail-level-up-items
             %span.ui-thumbnail-level-notes Keine übergeordneten Sets
           .ui-thumbnail-privacy
-            %i.icon-privacy-group{:title => "This media is shared with a group"}
+            = component('icon.privacy-group', title: 'This media is shared with a group')
           %a.ui-thumbnail-image-wrapper
             .ui-thumbnail-image-holder
               .ui-thumbnail-table-image-holder
