--- a/app/views/styleguide/08_Combos/_09_4_resources-tiles.html.haml
+++ b/app/views/styleguide/08_Combos/_09_4_resources-tiles.html.haml
@@ -29,20 +29,20 @@
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-1", :src => asset_path('styleguide/media-entry-2.jpg')}/
@@ -50,28 +50,28 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-open.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
-                    %i.icon-filter.ui-tile__flag.ui-tile__flag--type{:title => "This entry is a Set"}
+                    = component('icon.privacy-open', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
+                    = component('icon.filter', mods: 'ui-tile__flag.ui-tile__flag--typ', title: 'This entry is a Set')
             %li.ui-resource
               .ui-tile.ui-tile--set
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-1", :src => asset_path('styleguide/media-entry-1.jpg')}/
@@ -79,28 +79,28 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-open.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
-                    %i.icon-filter.ui-tile__flag.ui-tile__flag--type{:title => "This entry is a Set"}
+                    = component('icon.privacy-open', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
+                    = component('icon.filter', mods: 'ui-tile__flag.ui-tile__flag--typ', title: 'This entry is a Set')
             %li.ui-resource
               .ui-tile
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-3.jpeg')}/
@@ -108,27 +108,27 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-private.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
+                    = component('icon.privacy-private', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
             %li.ui-resource
               .ui-tile.ui-tile--set
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-4.jpeg')}/
@@ -136,27 +136,27 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-group.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
+                    = component('icon.privacy-group', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
             %li.ui-resource
               .ui-tile
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-5.jpeg')}/
@@ -164,27 +164,27 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-private.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
+                    = component('icon.privacy-private', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
             %li.ui-resource
               .ui-tile.ui-tile--set
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-6.jpeg')}/
@@ -192,28 +192,28 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-open.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
-                    %i.icon-filter.ui-tile__flag.ui-tile__flag--type{:title => "This entry is a Set"}
+                    = component('icon.privacy-open', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
+                    = component('icon.filter', mods: 'ui-tile__flag.ui-tile__flag--typ', title: 'This entry is a Set')
             %li.ui-resource
               .ui-tile.ui-tile--set
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-8.jpeg')}/
@@ -221,27 +221,27 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-private.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
+                    = component('icon.privacy-private', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
             %li.ui-resource
               .ui-tile
                 .ui-tile__head
                   %ul.ui-tile__actions.left.by-left
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-favor-toggle" => "", :title => "Zu Favoriten hinzufügen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.ui-tile__actions.right.by-right
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{:title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-tile__action
                       %a.ui-tile__action-link{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-tile__body
                   %a.ui-tile__thumbnail{:href => "http://example.com"}
                     %img.ui-tile__image{:alt => "Media-entry-3", :src => asset_path('styleguide/media-entry-9.jpg')}/
@@ -249,4 +249,4 @@
                   %h3.ui-tile__title Name that can easily go onto 2 lines
                   %h4.ui-tile__meta Author that can easily go onto 2 lines as asily go onto 2 lines fadoiu sdaifu siadofisdaofu oisaduf osais as well
                   %span.ui-tile__flags
-                    %i.icon-privacy-private.ui-tile__flag.ui-tile__flag--privacy{:title => "This entry is Private"}
+                    = component('icon.privacy-private', mods: 'ui-tile__flag.ui-tile__flag--privac', title: 'This entry is Private')
