--- a/app/views/styleguide/08_Combos/_14_workgroups.html.haml
+++ b/app/views/styleguide/08_Combos/_14_workgroups.html.haml
@@ -16,15 +16,15 @@
             %a{:href => "###media_resources?permissions%5Bgroup%5D%5Bids%5D%5B%5D=4", :title => "Inhalte dieser Gruppe anzeigen"} 2 Inhalte
           %td.ui-workgroup-actions
             %a.button.delete-workgroup
-              %i.icon-trash.dark
+              = component('icon.trash', 'dark')
             %a.button.edit-workgroup
-              %i.icon-pen.dark
+              = component('icon.pen', 'dark')
         %tr{"data-id" => "3"}
           %td.ui-workgroup-name ZHdK
           %td.ui-workgroup-items
             %a{:href => "###media_resources?permissions%5Bgroup%5D%5Bids%5D%5B%5D=3", :title => "Inhalte dieser Gruppe anzeigen"} 3 Inhalte
           %td.ui-workgroup-actions
             %a.button.delete-workgroup
-              %i.icon-trash.dark
+              = component('icon.trash', 'dark')
             %a.button.edit-workgroup
-              %i.icon-pen.dark
+              = component('icon.pen', 'dark')
