--- a/app/views/styleguide/08_Combos/_17_side-filter.html.haml
+++ b/app/views/styleguide/08_Combos/_17_side-filter.html.haml
@@ -106,7 +106,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Verwendungszweck"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -138,7 +138,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Bildzeit"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -170,7 +170,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Wetter/Klima"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -198,7 +198,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Farbe"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -234,7 +234,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Horizontlinie"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -246,7 +246,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Ra?umliche Wahrnehmung"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -270,7 +270,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Abstraktionsgrad"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -282,7 +282,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Landschaftselemente"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -302,7 +302,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "LV_Bildwirkung"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -382,7 +382,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "genre"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -394,7 +394,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "style"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -414,7 +414,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "epoch"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -426,7 +426,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
         %li.ui-side-filter-lvl1-item.ui-side-filter-item.has-active{"data-context-id" => "media_content", "data-filter-type" => "meta_data"}
           %a.strong.ui-accordion-toggle.open
             Werk
@@ -479,7 +479,7 @@
                     %span.ui-lvl3-item-count.resources_count 11
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:checked => "checked", :type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item.has-active{"data-key-name" => "type"}
               %a.ui-accordion-toggle.weak.open
                 %i.ui-side-filter-lvl2-marker
@@ -491,7 +491,7 @@
                     %span.ui-lvl3-item-count.resources_count 11
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
         %li.ui-side-filter-lvl1-item.ui-side-filter-item{"data-context-id" => "media_object", "data-filter-type" => "meta_data"}
           %a.strong.ui-accordion-toggle
             Medium
@@ -508,7 +508,7 @@
                     %span.ui-lvl3-item-count.resources_count 11
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
         %li.ui-side-filter-lvl1-item.ui-side-filter-item{"data-context-id" => "Columns", "data-filter-type" => "meta_data"}
           %a.strong.ui-accordion-toggle
             Säulenordnungen
@@ -525,7 +525,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "style"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -545,7 +545,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "epoch"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -557,7 +557,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
         %li.ui-side-filter-lvl1-item.ui-side-filter-item{"data-context-id" => "zhdk_bereich", "data-filter-type" => "meta_data"}
           %a.strong.ui-accordion-toggle
             ZHdK
@@ -574,7 +574,7 @@
                     %span.ui-lvl3-item-count.resources_count 11
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "academic year"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -586,7 +586,7 @@
                     %span.ui-lvl3-item-count.resources_count 11
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
         %li.ui-side-filter-lvl1-item.ui-side-filter-item{"data-context-id" => "VFO", "data-filter-type" => "meta_data"}
           %a.strong.ui-accordion-toggle
             Lehrmittel Fotografie
@@ -603,7 +603,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "style"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -623,7 +623,7 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
             %li.ui-side-filter-lvl2-item{"data-key-name" => "epoch"}
               %a.ui-accordion-toggle.weak
                 %i.ui-side-filter-lvl2-marker
@@ -635,4 +635,4 @@
                     %span.ui-lvl3-item-count.resources_count 1
               %label.ui-any-value{:title => "Jegliche Werte"}
                 %input.any-value.hidden{:type => "checkbox"}/
-                %i.icon-checkbox
+                = component('icon.checkbox')
