--- a/app/views/styleguide/08_Combos/_20_Terms-filter.html.haml
+++ b/app/views/styleguide/08_Combos/_20_Terms-filter.html.haml
@@ -13,7 +13,7 @@
         %span.title-s
           Häufigkeit auswerten
           %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Content.", "data-placement" => "bottom", :rel => "tooltip"}
-            %i.icon-question.mid
+            = component('icon.question', 'mid')
       .ui-terms-filter-slider-holder.ptx
         .ui-slider
           %a.ui-slider-handle
