--- a/app/views/styleguide/09_Past Spec/_1_set-vocabulary.html.haml
+++ b/app/views/styleguide/09_Past Spec/_1_set-vocabulary.html.haml
@@ -25,7 +25,7 @@
               .dropdown.ui-dropdown{:class => "$modifier-class"}
                 %h2.dropdown-toggle.ui-drop-toggle.title-l.link.separated.light.mbm{"data-toggle" => "dropdown"}
                   An inactive vocabulary name
-                  %i.icon-arrow-down
+                  = component('icon.arrow-down')
                 %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu", :style => "top: 100%; bottom: auto;"}
                   %li.ui-drop-item
                     %a An active vocabulary
@@ -36,10 +36,10 @@
               %p Set vocabulary description. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipcia deserunt mollit anim id est laborum.
             .col1of3.by-right
               %a.button
-                %i.icon-checkmark
+                = component('icon.checkmark')
                 Enable
               %a.button.mls
-                %i.icon-eye
+                = component('icon.eye')
                 View
         .ui-container.inverted.ui-toolbar.pvx
           %h2.ui-toolbar-header.pls
@@ -55,7 +55,7 @@
               %span.title-s
                 Häufigkeit auswerten
                 %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Content.", "data-placement" => "bottom", :rel => "tooltip"}
-                  %i.icon-question.mid
+                  = component('icon.question', 'mid')
             .ui-terms-filter-slider-holder.ptx
               .ui-slider
                 %a.ui-slider-handle
@@ -277,7 +277,7 @@
               .dropdown.ui-dropdown{:class => "$modifier-class"}
                 %h2.dropdown-toggle.ui-drop-toggle.title-l.link.separated.light.mbm{"data-toggle" => "dropdown"}
                   An active vocabulary name
-                  %i.icon-arrow-down
+                  = component('icon.arrow-down')
                 %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu", :style => "top: 100%; bottom: auto;"}
                   %li.ui-drop-item
                     %a An active vocabulary
@@ -288,10 +288,10 @@
               %p Set vocabulary description. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipcia deserunt mollit anim id est laborum.
             .col1of3.by-right
               %a.button
-                %i.icon-close
+                = component('icon.close')
                 Disable
               %a.button.mls
-                %i.icon-eye
+                = component('icon.eye')
                 View
         .ui-container.inverted.ui-toolbar.pvx
           %h2.ui-toolbar-header.pls
@@ -307,7 +307,7 @@
               %span.title-s
                 Häufigkeit auswerten
                 %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Content.", "data-placement" => "bottom", :rel => "tooltip"}
-                  %i.icon-question.mid
+                  = component('icon.question', 'mid')
             .ui-terms-filter-slider-holder.ptx
               .ui-slider
                 %a.ui-slider-handle
@@ -529,7 +529,7 @@
               .dropdown.ui-dropdown{:class => "$modifier-class"}
                 %h2.dropdown-toggle.ui-drop-toggle.title-l.link.separated.light.mbm{"data-toggle" => "dropdown"}
                   An active vocabulary name
-                  %i.icon-arrow-down
+                  = component('icon.arrow-down')
                 %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu", :style => "top: 100%; bottom: auto;"}
                   %li.ui-drop-item
                     %a An active vocabulary
@@ -540,10 +540,10 @@
               %p Set vocabulary description. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipcia deserunt mollit anim id est laborum.
             .col1of3.by-right
               %a.button
-                %i.icon-close
+                = component('icon.close')
                 Disable
               %a.button.mls
-                %i.icon-eye
+                = component('icon.eye')
                 View
         .ui-container.inverted.ui-toolbar.pvx
           %h2.ui-toolbar-header.pls
@@ -559,7 +559,7 @@
               %span.title-s
                 Häufigkeit auswerten
                 %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Content.", "data-placement" => "bottom", :rel => "tooltip"}
-                  %i.icon-question.mid
+                  = component('icon.question', 'mid')
             .ui-terms-filter-slider-holder.ptx
               .ui-slider
                 %a.ui-slider-handle
