--- a/app/views/styleguide/10_Upcoming - Actions n Stats/_2_stats.html.haml
+++ b/app/views/styleguide/10_Upcoming - Actions n Stats/_2_stats.html.haml
@@ -14,7 +14,7 @@
       .row
         .col1of5
           .ui-stats__module.ui-container.pam
-            %i.icon-media-entry.ui-stats__icon
+            = component('icon.media-entry', 'ui-stats__icon')
             %a.ui-stats__value
               32048
             %br/
@@ -22,7 +22,7 @@
               Medienenträge
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-set.ui-stats__icon
+            = component('icon.set', 'ui-stats__icon')
             %a.ui-stats__value
               1765
               %br/
@@ -30,7 +30,7 @@
               Sets
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-tag.ui-stats__icon
+            = component('icon.tag', 'ui-stats__icon')
             %a.ui-stats__value
               54763
             %br/
@@ -38,7 +38,7 @@
               Schlagworte
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-privacy-private.ui-stats__icon
+            = component('icon.privacy-private', 'ui-stats__icon')
             %span.ui-stats__value
               1023
             %br/
@@ -46,7 +46,7 @@
               Nutzerinnen
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-privacy-group.ui-stats__icon
+            = component('icon.privacy-group', 'ui-stats__icon')
             %span.ui-stats__value
               809
             %br/
@@ -58,7 +58,7 @@
       .row
         .col1of5
           .ui-stats__module.ui-container.pam
-            %i.icon-media-entry.ui-stats__icon
+            = component('icon.media-entry', 'ui-stats__icon')
             %a.ui-stats__value
               32048
             %br/
@@ -66,7 +66,7 @@
               Medienenträge
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-set.ui-stats__icon
+            = component('icon.set', 'ui-stats__icon')
             %a.ui-stats__value
               1765
               %br/
@@ -74,7 +74,7 @@
               Sets
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-tag.ui-stats__icon
+            = component('icon.tag', 'ui-stats__icon')
             %a.ui-stats__value
               54763
             %br/
@@ -82,7 +82,7 @@
               Schlagworte
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-privacy-private.ui-stats__icon
+            = component('icon.privacy-private', 'ui-stats__icon')
             %span.ui-stats__value
               1023
             %br/
@@ -90,7 +90,7 @@
               Nutzerinnen
         .col1of5
           .ui-stats__module.ui-container.bordered-left.pam
-            %i.icon-privacy-group.ui-stats__icon
+            = component('icon.privacy-group', 'ui-stats__icon')
             %span.ui-stats__value
               809
             %br/
