--- a/app/assets/stylesheets/layout/_layout.sass
+++ b/app/assets/stylesheets/layout/_layout.sass
@@ -38,40 +38,51 @@ body
  *  HOME PAGE
  *-----------------------------------------
 
-// Positioning claim+login box
-.view-home .ui-home-claim
-  +dimension(940px, 220px)
-  +position-top-right(50%, 50%)
-  +position-bottom-left(50%, 50%)
-  margin: -130px -490px
-  z-index: 50
+#app[data-view="application"]
 
-// Adding some extra space above the footer
-.view-home .app-body
-  padding: 0 0 120px 0
+  // Positioning claim+login box
+  .ui-home-claim
+    +dimension(940px, 220px)
+    +position-top-right(50%, 50%)
+    +position-bottom-left(50%, 50%)
+    margin: -130px -490px
+    z-index: 50
 
-// Limiting home page's container to 980px
-.view-home .app-body-ui-container
-  margin: 0 auto
-  position: relative
-  width: 980px
-  // Positioning tab navigation over the collage
-  .ui-header-menu
-    bottom: 100%
-  // Tweaking shadows of the tab-nav buttons
-  .ui-header-menu .ui-tabs-item
-    +box-shadow(0 -2px 2px $darken-more)
-  // Adjusting display of resources
-  .ui-resources-holder
-    margin: 0
-    padding: $space-m 0
-  .ui-resources
-    padding: 0
-  .ui-resource
-    margin-right: -$space-x
-  .ui-resource .media-catalog
-    margin-right: $space-s
-    // work-around .ui-resource's negative margin
+  // Adding some extra space above the footer
+  .app-body
+    padding: 0 0 120px 0
+
+  // Limiting home page's container to 980px
+  .app-body-ui-container
+    margin: 0 auto
+    position: relative
+    width: 980px
+    // Positioning tab navigation over the collage
+    .ui-header-menu
+      bottom: 100%
+    // Tweaking shadows of the tab-nav buttons
+    .ui-header-menu .ui-tabs-item
+      +box-shadow(0 -2px 2px $darken-more)
+    // Adjusting display of resources
+    .ui-resources-holder
+      margin: 0
+      padding: $space-m 0
+    .ui-resources
+      padding: 0
+    .ui-resource
+      margin-right: -$space-x
+    .ui-resource .media-catalog
+      margin-right: $space-s
+      // work-around .ui-resource's negative margin
+
+  // Alerts on home
+  .ui-alerts
+    margin: 0 !important
+    .ui-alert
+      +border-radius(0)
+      +box-shadow(inset 0 1px 0 $lighten-less, inset 0 -1px 0 $darken)
+      padding: $space-s
+      margin-botom: 0
 
 /**
  *  BOOTSTRAP STUFF (to revise later and see if still needed)
