--- a/app/views/styleguide/05_Forms/_2_form-group.html.haml
+++ b/app/views/styleguide/05_Forms/_2_form-group.html.haml
@@ -23,7 +23,7 @@
         %label.form-label
           Form label
           %span.ui-form-ui-ttip-toggle.ui-ttip-toggle{"data-original-title" => "Tooltip Text", "data-placement" => "left", :rel => "tooltip"}
-            %i.icon-question
+            = component('icon.question')
           %small Comment if needed
         .form-item
           %input.block{:type => "text"}
