--- a/app/views/styleguide/06_Icons/_5_icon-special.html.haml
+++ b/app/views/styleguide/06_Icons/_5_icon-special.html.haml
@@ -15,7 +15,7 @@
 = partial('element', element) do
   - element[:mods].each do |name, description|
     = partial('example', { mod: name}) do
-      %i.icon-checkbox{class: name}
-      %i.icon-checkbox-bright{class: name}
-      %i.icon-star-empty{class: name}
+      = component('icon.checkbox', name)
+      = component('icon.checkbox-bright', name)
+      = component('icon.star-empty', name)
 
