--- a/app/views/styleguide/08_Combos/_09_2_resources-miniature.html.haml
+++ b/app/views/styleguide/08_Combos/_09_2_resources-miniature.html.haml
@@ -39,7 +39,7 @@
                           %img.ui-thumbnail-level-image{:alt => "Media-entry-6", :src => asset_path('styleguide/media-entry-6.jpeg')}/
                   %span.ui-thumbnail-level-notes 5 Inhalte
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-group{:title => "This media is shared with a group"}
+                  = component('icon.privacy-group', title: 'This media is shared with a group')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -53,20 +53,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -178,7 +178,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-entry.video
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -192,20 +192,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -305,7 +305,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-entry.image
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-open{:title => "This media is Public"}
+                  = component('icon.privacy-open', title: 'This media is Public')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -319,20 +319,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -432,7 +432,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-entry.image
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -446,20 +446,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -559,7 +559,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-set
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -573,20 +573,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -686,7 +686,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-entry.image
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -700,20 +700,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -813,7 +813,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-entry.image
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -827,20 +827,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -940,7 +940,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-set
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -954,20 +954,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
@@ -1067,7 +1067,7 @@
             .ui-resource-thumbnail
               .ui-thumbnail.media-set
                 .ui-thumbnail-privacy
-                  %i.icon-privacy-private{:title => "This media is private"}
+                  = component('icon.privacy-private', title: 'This media is private')
                 %a.ui-thumbnail-image-wrapper
                   .ui-thumbnail-image-holder
                     .ui-thumbnail-table-image-holder
@@ -1081,20 +1081,20 @@
                   %ul.left.by-left
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-checkbox.active{"data-clipboard-toggle" => "", :title => "Zur Zwischenablage hinzufügen/entfernen"}
-                        %i.icon-checkbox
+                        = component('icon.checkbox')
                     %li.ui-thumbnail-action
                       %a.active.ui-thumbnail-action-favorite{"data-favor-toggle" => "", :title => "Zur Favoriten hinzufügen/entfernen"}
-                        %i.icon-star-empty
+                        = component('icon.star-empty')
                   %ul.right.by-right
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-browse{:href => "#", :title => "Stöbern"}
-                        %i.icon-eye
+                        = component('icon.eye')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-edit{:href => "#", :title => "Metadaten editieren"}
-                        %i.icon-pen
+                        = component('icon.pen')
                     %li.ui-thumbnail-action
                       %a.ui-thumbnail-action-delete{"data-delete-action" => "", :title => "Löschen"}
-                        %i.icon-trash
+                        = component('icon.trash')
                 .ui-thumbnail-dropdown
                   .dropdown.ui-dropdown
                     %a.dropdown-toggle.ui-drop-toggle.button.block{"data-toggle" => "dropdown", :href => "#"} Aktionen
